# BusinessCentral.AL.Mutations

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONCEPT.md  LICENSE  README.md  action.yml  app.json  entrypoint.ps1  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/prompts/: agent-prompt.md
.github/workflows/: build.yml  claude-code-review.yml  claude-dev.yml  claude.yml  mutation-sentinel.yml  publish.yml  test.yml
AlMutate/: AlMutate.slnx
AlMutate/AlMutate/: AlMutate.csproj  MutationException.cs  MutationPipeline.cs  Program.cs
AlMutate/AlMutate.Tests/: AlMutate.Tests.csproj  AlRunnerServerTests.cs  AlScannerTests.cs  CliRunner.cs  CliTests.cs  GitServiceTests.cs  IntegrationTests.cs  MutationLogTests.cs  MutatorTests.cs  OperatorLoaderTests.cs  PipelineTests.cs  ReportGeneratorTests.cs  TestRunnerTests.cs
BCMutations/: BCMutations.psd1  BCMutations.psm1
BCMutations/Private/: ConvertTo-MutationReport.ps1  Find-MutationTargets.ps1  Invoke-AppCompile.ps1  Invoke-AppDeploy.ps1  Invoke-ContainerSetup.ps1  Invoke-ContainerTeardown.ps1  Invoke-TestRun.ps1  New-Mutation.ps1  Read-OperatorFile.ps1  Restore-Mutation.ps1  Test-LineContext.ps1  Write-MutationProgress.ps1
al_mutate/: cli.py  log.py  mutate.py  operators.py  report.py  run.py  scan.py
docs/: API.md  ARCHITECTURE.md  CSHARP_MIGRATION_PLAN.md  EXAMPLES.md  OPERATORS.md  TOOLING.md  USAGE.md
operators/: default.json  schema.json
src/Interfaces/: SMCIMutation.Interface.al
tests/: test_cli.py  test_log.py  test_mutate.py  test_operators.py  test_report.py  test_run.py  test_scan.py
(+49 files in other folders)
