[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "al-mutate"
version = "0.1.0"
description = "Mutation testing tool for Business Central AL code"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.0",
    "tree-sitter>=0.23",
    "tree-sitter-al>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
al-mutate = "al_mutate.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
